--- a/web_pokedex/src/app/shared/poke-list/poke-list.component.scss
+++ b/web_pokedex/src/app/shared/poke-list/poke-list.component.scss
@@ -18,7 +18,7 @@ $padding: rem-calc(20);
             background: var(--branco);
 
             width: calc(49% - 2.5rem);
-            height: rem-calc(200);
+            height: rem-calc(240);
 
             margin-bottom: rem-calc(10);
             padding: $padding;
@@ -59,18 +59,50 @@ $padding: rem-calc(20);
                 }
             }
         }
-        .init p{
-            box-align: center;
-            color: #FFFFFF;
-            margin-top: rem-calc(10);
-            border-left: 3px solid #FFFFFF;
-            padding: rem-calc(5);
-        }
+
 
         @media (max-width: 400px) {
             a {
                 width: 100% !important;
             }
         }
+    }
+
+
+
+    button {
+        background: #FF4742;
+        border: 1px solid #FF4742;
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        display: inline-block;
+        font-family: nunito, roboto, proxima-nova, "proxima nova", sans-serif;
+        font-size: 16px;
+        font-weight: 800;
+        line-height: 16px;
+        min-height: 30px;
+        outline: 0;
+        padding: 12px 14px;
+        text-align: center;
+        text-rendering: geometricprecision;
+        text-transform: none;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+        vertical-align: middle;
+    }
+
+    button:hover,
+    button:active {
+        background-color: initial;
+        background-position: 0 0;
+        color: #FF4742;
+    }
+
+    button:active {
+        opacity: .5;
     }
 }
