--- a/web_pokedex/src/app/shared/messages/messages.component.html
+++ b/web_pokedex/src/app/shared/messages/messages.component.html
@@ -1,3 +1,3 @@
-<div class="init" *ngIf="messagesService.message">
+<div class="alert" *ngIf="messagesService.message">
     <p>{{messagesService.message}}</p>
 </div>
