--- a/web_pokedex/src/app/shared/poke-list/poke-list.component.scss
+++ b/web_pokedex/src/app/shared/poke-list/poke-list.component.scss
@@ -24,38 +24,24 @@ $padding: rem-calc(20);
             padding: $padding;
 
             border-radius: rem-calc(10);
-
-            text-decoration: none;
             color: var(--primary-color);
 
-            &__status {
-                h2 {
-                    font-size: rem-calc(22);
-                    font-style: italic;
-                    font-weight: 700;
-                    text-transform: capitalize;
-
-                    margin-bottom: rem-calc(10);
-                }
-            }
 
             &__image {
                 position: absolute;
-
                 display: flex;
+                margin: auto;
                 align-items: center;
                 justify-content: center;
 
-                height: rem-calc(150);
-                width: rem-calc(170);
+                height: rem-calc(170);
+                width: rem-calc(180);
 
                 right: $padding;
                 bottom: $padding;
 
-                background: url('../../../assets/bg/background-list-pokemon.svg') no-repeat;
-
                 img {
-                    width: rem-calc(140);
+                    width: rem-calc(120);
                 }
             }
         }
@@ -69,8 +55,15 @@ $padding: rem-calc(20);
     }
 
 
-
+    h2 {
+        font-size: rem-calc(22);
+        font-weight: 700;
+        text-transform: capitalize;
+        margin-bottom: rem-calc(10);
+    }
     button {
+        position: absolute;
+        right: 5%;
         background: #FF4742;
         border: 1px solid #FF4742;
         border-radius: 6px;
@@ -93,16 +86,5 @@ $padding: rem-calc(20);
         -webkit-user-select: none;
         touch-action: manipulation;
         vertical-align: middle;
-    }
-
-    button:hover,
-    button:active {
-        background-color: initial;
-        background-position: 0 0;
-        color: #FF4742;
-    }
-
-    button:active {
-        opacity: .5;
     }
 }
